--- a/vue/package.json
+++ b/vue/package.json
@@ -14,6 +14,7 @@
   ],
   "sideEffects": false,
   "scripts": {
+    "dev:full:esm": "rollup -w -c scripts/config.js --environment TARGET:web-full-esm",
     "dev": "rollup -w -c scripts/config.js --environment TARGET:web-full-dev",
     "dev:cjs": "rollup -w -c scripts/config.js --environment TARGET:web-runtime-cjs",
     "dev:esm": "rollup -w -c scripts/config.js --environment TARGET:web-runtime-esm",
