--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "script-ext-html-webpack-plugin": "^2.0.1",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
@@ -14,6 +15,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-rc.3",
     "@vue/cli-service": "^3.0.0-rc.3",
+    "html-webpack-plugin": "^3.2.0",
     "vue-template-compiler": "^2.5.16"
   },
   "browserslist": [
